# whatsapp_spambot_rs

./: .gitignore  Cargo.toml  README.md
src/: csv_parser.rs  main.rs  whatsapp.rs
