[package]
name = "whatsapp_mass_dm_rs"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
thirtyfour = "0.32.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
log = "0.4.22"
base64 = "0.22.1"
